--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "peh2-react-boilerplate",
+  "name": "peh2-expensify-app",
   "version": "1.0.0",
   "description": "Starting point for build modern websites",
   "main": "index.js",
   "scripts": {
     "build": "webpack",
-    "dev-server": "webpack-dev-server",
+    "dev-server": "webpack-dev-server --open",
     "fix-styles": "prettier-stylelint --write 'src/**/*.{css,scss}' "
   },
   "babel": {
@@ -62,6 +62,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-modal": "^3.10.1",
+    "react-router-dom": "^5.0.1",
     "strip-ansi": "^5.2.0",
     "validator": "^11.1.0"
   }
