--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-dom": "^16.9.0",
     "react-modal": "^3.10.1",
     "react-router-dom": "^5.0.1",
+    "redux": "^4.0.4",
     "strip-ansi": "^5.2.0",
     "validator": "^11.1.0"
   }
