--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
       "@babel/react"
     ],
     "plugins": [
-      "@babel/plugin-proposal-class-properties"
+      "@babel/plugin-proposal-class-properties",
+      "@babel/plugin-proposal-object-rest-spread"
     ]
   },
   "browserslist": [
@@ -27,6 +28,7 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.5.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "autoprefixer": "^9.6.1",
@@ -58,6 +60,8 @@
   },
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@types/react": "^16.9.2",
+    "@types/redux": "^3.6.0",
     "normalize.css": "^8.0.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
@@ -65,6 +69,7 @@
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.4",
     "strip-ansi": "^5.2.0",
+    "uuid": "^3.3.3",
     "validator": "^11.1.0"
   }
 }
