--- a/package.json
+++ b/package.json
@@ -62,8 +62,11 @@
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@types/react": "^16.9.2",
     "@types/redux": "^3.6.0",
+    "moment": "^2.24.0",
     "normalize.css": "^8.0.1",
     "react": "^16.9.0",
+    "react-addons-shallow-compare": "^15.6.2",
+    "react-dates": "^21.2.1",
     "react-dom": "^16.9.0",
     "react-modal": "^3.10.1",
     "react-redux": "^7.1.1",
