--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
     "@types/redux": "^3.6.0",
     "moment": "^2.24.0",
     "normalize.css": "^8.0.1",
-    "react": "^16.9.0",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.0",
     "react-addons-shallow-compare": "^15.6.2",
     "react-dates": "^21.2.1",
     "react-dom": "^16.9.0",
