--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
+    "fix-styles": "prettier-stylelint --write 'src/**/*.{css,scss}' ",
     "dev-server": "webpack-dev-server --open",
-    "fix-styles": "prettier-stylelint --write 'src/**/*.{css,scss}' "
+    "test": "jest"
   },
   "babel": {
     "presets": [
@@ -45,6 +46,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.1",
     "eslint-plugin-prettier": "2.3.1",
     "eslint-plugin-react": "^7.4.0",
+    "jest": "^24.9.0",
     "node-sass": "^4.12.0",
     "postcss-loader": "^3.0.0",
     "prettier": "1.8.2",
