--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "Starting point for build modern websites",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
+    "serve": "live-server public/",
+    "build:dev": "webpack --env.ENVIRONMENT=development --config webpack.config.js",
+    "build:prod": "webpack -p --env.ENVIRONMENT=production --config webpack.config.js",
     "fix-styles": "prettier-stylelint --write 'src/**/*.{css,scss}' ",
-    "dev-server": "webpack-dev-server --open",
-    "test": "jest --config=jest.config.json"
+    "dev-server": "webpack-dev-server --env.ENVIRONMENT=development --open",
+    "test": "cross-env NODE_ENV=test jest --config=jest.config.json --watchAll"
   },
   "babel": {
     "presets": [
@@ -36,9 +38,9 @@
     "babel-cli": "^6.26.0",
     "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.6",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^0.28.11",
+    "dotenv": "^8.2.0",
     "enzyme-to-json": "^3.4.3",
     "eslint": "4.10.0",
     "eslint-config-airbnb": "^16.1.0",
@@ -47,6 +49,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.1",
     "eslint-plugin-prettier": "2.3.1",
     "eslint-plugin-react": "^7.4.0",
+    "html-webpack-plugin": "^3.2.0",
     "jest": "^24.9.0",
     "node-sass": "^4.12.0",
     "postcss-loader": "^3.0.0",
@@ -59,17 +62,23 @@
     "stylelint-order": "^3.1.0",
     "webpack": "^4.39.3",
     "webpack-cli": "^3.3.7",
-    "webpack-dev-server": "^3.8.0"
+    "webpack-dev-server": "^3.8.0",
+    "webpack-merge": "^4.2.2"
   },
   "dependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/cli": "^7.7.4",
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
     "@types/react": "^16.9.2",
     "@types/redux": "^3.6.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
+    "eslint-plugin-jest": "^23.0.5",
     "firebase": "^7.4.0",
+    "live-server": "^1.2.1",
+    "mini-css-extract-plugin": "^0.8.0",
     "moment": "^2.24.0",
     "normalize.css": "^8.0.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "prop-types": "^15.7.2",
     "raf": "^3.4.1",
     "react": "^16.8.0",
@@ -83,7 +92,7 @@
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "strip-ansi": "^5.2.0",
-    "uuid": "^3.3.3",
+    "terser-webpack-plugin": "^2.2.1",
     "validator": "^11.1.0"
   }
 }
