--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "serve": "live-server public/",
     "build:dev": "webpack --env.ENVIRONMENT=development --config webpack.config.js",
-    "build:prod": "webpack -p --env.ENVIRONMENT=production --config webpack.config.js",
+    "build:prod": "webpack -p",
     "fix-styles": "prettier-stylelint --write 'src/**/*.{css,scss}' ",
     "dev-server": "webpack-dev-server --env.ENVIRONMENT=development --open",
     "test": "cross-env NODE_ENV=test jest --config=jest.config.json --watchAll",
