--- a/package.json
+++ b/package.json
@@ -43,7 +43,10 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^0.28.11",
     "dotenv": "^8.2.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
     "enzyme-to-json": "^3.4.3",
+    "eslint-plugin-jest": "^23.0.5",
     "eslint": "4.10.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-prettier": "2.7.0",
@@ -51,37 +54,29 @@
     "eslint-plugin-jsx-a11y": "^6.0.1",
     "eslint-plugin-prettier": "2.3.1",
     "eslint-plugin-react": "^7.4.0",
-    "html-webpack-plugin": "^3.2.0",
     "jest": "^24.9.0",
-    "node-sass": "^4.12.0",
-    "postcss-loader": "^3.0.0",
     "prettier": "1.8.2",
     "prettier-eslint-cli": "^4.4.0",
     "prettier-stylelint": "^0.4.2",
-    "sass-loader": "^8.0.0",
-    "style-loader": "^0.18.2",
+    "react-test-renderer": "^16.11.0",
     "stylelint": "^10.1.0",
     "stylelint-order": "^3.1.0",
-    "webpack": "^4.39.3",
     "webpack-cli": "^3.3.7",
-    "webpack-dev-server": "^3.8.0",
-    "webpack-merge": "^4.2.2"
+    "webpack-dev-server": "^3.8.0"
   },
   "dependencies": {
     "@babel/cli": "^7.7.4",
     "@babel/plugin-proposal-class-properties": "^7.7.4",
     "@types/react": "^16.9.2",
     "@types/redux": "^3.6.0",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.15.1",
-    "eslint-plugin-jest": "^23.0.5",
     "express": "^4.17.1",
     "firebase": "^7.4.0",
-    "live-server": "^1.2.1",
     "mini-css-extract-plugin": "^0.8.0",
     "moment": "^2.24.0",
+    "node-sass": "^4.12.0",
     "normalize.css": "^8.0.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "postcss-loader": "^3.0.0",
     "prop-types": "^15.7.2",
     "raf": "^3.4.1",
     "react": "^16.8.0",
@@ -91,11 +86,13 @@
     "react-modal": "^3.10.1",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
-    "react-test-renderer": "^16.11.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
+    "sass-loader": "^8.0.0",
     "strip-ansi": "^5.2.0",
+    "style-loader": "^0.18.2",
     "terser-webpack-plugin": "^2.2.1",
-    "validator": "^11.1.0"
+    "validator": "^11.1.0",
+    "webpack": "^4.39.3"
   }
 }
