--- a/package.json
+++ b/package.json
@@ -46,11 +46,11 @@
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
     "enzyme-to-json": "^3.4.3",
-    "eslint-plugin-jest": "^23.0.5",
     "eslint": "4.10.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-prettier": "2.7.0",
     "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jest": "^23.0.5",
     "eslint-plugin-jsx-a11y": "^6.0.1",
     "eslint-plugin-prettier": "2.3.1",
     "eslint-plugin-react": "^7.4.0",
@@ -59,6 +59,7 @@
     "prettier-eslint-cli": "^4.4.0",
     "prettier-stylelint": "^0.4.2",
     "react-test-renderer": "^16.11.0",
+    "redux-mock-store": "^1.5.3",
     "stylelint": "^10.1.0",
     "stylelint-order": "^3.1.0",
     "webpack-cli": "^3.3.7",
@@ -69,6 +70,7 @@
     "@babel/plugin-proposal-class-properties": "^7.7.4",
     "@types/react": "^16.9.2",
     "@types/redux": "^3.6.0",
+    "cross-env": "^6.0.3",
     "express": "^4.17.1",
     "firebase": "^7.4.0",
     "mini-css-extract-plugin": "^0.8.0",
