Update with jest and feature request

--- a/.eslintrc
+++ b/.eslintrc
@@ -60,7 +60,7 @@
     "comma-dangle": 0,
     "max-len": 0,
     "import/extensions": 0,
-    "no-underscore-dangle": 0,
+    "no-underscore-dangle": ["error", { "allow": [_id, b_codes_id] }],
     "consistent-return": 0,
     "react/display-name": 1,
     "react/no-array-index-key": 0,
@@ -111,5 +111,11 @@
   "plugins": [
     // "html",
     "prettier"
-  ]
+  ],
+  "globals": {
+    "_": true,
+    "CSSModule": true,
+    "Streamy": true,
+    "ReactClass": true
+  }
 }
