--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "normalize.css": "^8.0.1",
+    "numeral": "^2.0.6",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
     "prop-types": "^15.7.2",
