--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
   "dependencies": {
     "@babel/cli": "^7.7.4",
     "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "@babel/polyfill": "^7.8.0",
     "@types/react": "^16.9.2",
     "@types/redux": "^3.6.0",
     "cross-env": "^6.0.3",
